# AI

./: .gitignore
agents/store_ops_agent/: .env.example  .gitignore  README.md  main.py  prd.md  pyproject.toml
agents/store_ops_agent/app/: __init__.py  main.py
agents/store_ops_agent/app/agents/: __init__.py  graph.py  state.py
agents/store_ops_agent/app/agents/nodes/: __init__.py  finalize.py  generate.py  grounding_check.py  parse_classify.py  retrieve.py
agents/store_ops_agent/app/api/: __init__.py  chat.py  question.py
agents/store_ops_agent/app/core/: __init__.py  answer_orchestrator.py  citation_formatter.py  filtered_retriever.py  followup_generator.py  grounding_checker.py  metadata_filter.py  tracing.py
agents/store_ops_agent/app/indexing/: __init__.py  chunker.py  doc_store.py  document_loader.py  embedder.py  pipeline.py  vector_store.py
agents/store_ops_agent/app/middleware/: __init__.py  error_handler.py  latency.py
agents/store_ops_agent/app/models/: __init__.py  schemas.py
agents/store_ops_agent/tests/: test_agent_graph.py  test_agent_nodes.py  test_agent_state.py  test_answer_orchestrator.py  test_api.py  test_chat_endpoint.py  test_chunker.py  test_citation_formatter.py  test_doc_store.py  test_document_loader.py  test_embedder.py  test_filtered_retriever.py  test_followup_generator.py  test_grounding_checker.py  test_indexing_pipeline.py  test_metadata_filter.py  test_middleware.py  test_schemas.py  test_tracing.py  test_vector_store.py
engine/ResearchPaperSummary/: .gitignore  Dockerfile.dev  Dockerfile.prod  client.py  docker-compose.yaml  pyproject.toml  server.py
engine/ResearchPaperSummary/chain/: chat.py  main.py
engine/ResearchPaperSummary/core/: data_loaders.py  embeddings.py  retrievers.py  singleton.py  splitters.py  vector_store.py
engine/ResearchPaperSummary/custom_types/: embedding.py  vector_store.py
engine/ResearchPaperSummary/schemas/: types.py
engine/ResearchPaperSummary/split_docs/: main.py
engine/ResearchPaperSummary/vector_store/: main.py
langchain-registry/: .gitignore  client.py  main.py  pyproject.toml  server.py
langchain-registry/chains/: atomic_chains.py  atomic_models.py  composed_chains.py  composed_models.py  constants.py  preprocess_chains.py  preprocess_models.py  retriever_chains.py
langchain-registry/chains/task_chains/: summary_chains.py  summary_models.py
langchain-registry/chains/task_chains/summary/: researchpaper_summary.py
langchain-registry/graphs/: graph.py  params.py  retriever_chain.py  retriever_io.py  utils.py
langchain-registry/summary/: chains.py
research/: pyproject.toml
research/common/: base.py  datasets.py  loggers.py  utils.py
research/docker/: README.md
research/docker/huggingface/stable_diffusion/: Dockerfile  docker-compose.yaml
research/docker/huggingface/step1x-3d/: Dockerfile  docker-compose.yaml
research/docker/segmentation/unet/: Dockerfile  Dockerfile.dockerignore  Dockerfile.test  Dockerfile.train  README.md  docker-compose.yaml
research/huggingface/stable_diffusion/: README.md  main.py
research/huggingface/step1x-3d/: main.py
research/segmentation/unet/: READE.md  networks.py  test_with_hydra.py  train_with_hydra.py  trainer.py  tt.py
research/segmentation/unet/config/: config.py  test.yaml  train.yaml
research/segmentation/unet/config/dataset/: AnotherDataset.yaml  BaseDataset.yaml  ComposeDataset.yaml  ComposeDataset2.yaml  MVTecDataset.yaml  config.py
research/segmentation/unet/config/loss/: CrossEntropyLoss.yaml  config.py
research/segmentation/unet/config/network/: Unet.yaml  config.py
research/segmentation/unet/config/optimizer/: Adam.yaml  config.py
research/segmentation/unet/config/trainer/: UnetTrainer.yaml  (+1 more)
segmentation/unet/: data_loaders.py  datasets.py  pyproject.toml  utils.py
(+14 files in other folders)
