[project]
name = "langchain-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "ipython>=9.2.0",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-core>=0.3.56",
    "langchain-naver>=0.1.0",
    "langchain-openai>=0.3.14",
    "langgraph>=0.4.7",
    "langserve[all]>=0.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
    "pymupdf>=1.25.5",
    "pyppeteer>=2.0.0",
    "rembg>=2.0.66",
    "transformers>=4.52.3",
    "ultralytics>=8.3.145",
    "xlrd>=2.0.1",
]
