[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["lukasdeveloperacc <lukasdeveloperacc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.21"
langchain-core = "^0.3.49"
langchain-community = "^0.3.20"
langchain-openai = "^0.3.11"
pymupdf = "^1.25.4"
faiss-cpu = "^1.10.0"
langserve = {extras = ["all"], version = "^0.3.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
