[tool.poetry]
name = "unet"
version = "0.1.0"
description = ""
authors = ["reconlabs-luke <luke@reconlabs.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
torch = {version = "^2.6.0", source = "pytorch"}
torchvision = {version = "^0.21.0", source = "pytorch"}
torchaudio = {version = "^2.6.0", source = "pytorch"}
scikit-learn = "^1.6.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
